minor HTML and CSS modification

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
 						<p>Lorem ipsum dolor sit amet, erat praesent sed integer quis, aliquet neque ultrices condimentum blandit iaculis non, at in. Molestiae lorem tempor dolor nulla per, integer at imperdiet. Wisi vivamus vitae dui blandit in, hendrerit turpis. Mi leo suspendisse suspendisse lacinia tincidunt amet, sed dui feugiat venenatis parturient, aliquam sodales ullamcorper, lectus vitae justo quisque egestas ac eu, integer lectus urna viverra cras libero architecto. Ornare magna vel.</p>
 
 					<h2>The Secont Week</h2>
-						<article><p>When I started ths blog, I used lorem ipsum as placeholder text. Five whole paragraphs of it. In retrospect, it was a missed oppurtunity to actually document the week to week progress I make at NSS. Going forward, that's what I'll use this for. This past week was the second week and things are progressing. I thought I had a better handle on HTML and CSS than I actually do, but that's ok. I figured out some of the mistakes I was making and I'm learning not to make them over and over again. I've also embraced the MVP ethos-- its more important that things work like they're supposed to rather than look nice. I need to continue to keep that in mind. I mean, things should still look nice, but I shouldn't waste time picking the perfect typography if the JavaScript won't run. Which brings me to my next point. JavaScript. I need to practice. I understand the concepts but putting into into practice isn't alway the easiest. I'm confident I can pick it up though. Ok. That's all for this week.</p></article>
 
-						<aside><p>I wasn't planning on messing with the CSS, but I just loaded the page and God its ugly. Sorry to anyone who has already looked at this page.</p></aside>
+					<p class="date">April 17th, 2017</p>
+
+						<article><p>When I started ths blog, I used lorem ipsum as placeholder text. Five whole paragraphs of it. In retrospect, it was a missed oppurtunity to actually document the week to week progress I make at NSS. Going forward, that's what I'll use this for. This past week was the second week and things are progressing. I thought I had a better handle on HTML and CSS than I actually do, but that's ok. I figured out some of the mistakes I was making and I'm learning not to make them over and over again. I've also embraced the MVP ethos-- its more important that things work like they're supposed to rather than look nice. I need to continue to keep that in mind. I mean, things should still look nice, but I shouldn't waste time picking the perfect typography if the JavaScript won't run.</p>
+						<p>Which brings me to my next point. JavaScript. I need to practice. I understand the concepts but putting into into practice isn't alway the easiest. I'm confident I can pick it up though. Git has been a little confusing for me too, but I've been committing a lot more lately and everytime it gets easier. I guess that's probably the way all of this is going to work. Someday it'll just click. I hope.</p>
+
+						<p>Oh, and I need to get better about my indentation and layout. Some of these HTML files have been a mess. I'm sure whitespace has been a nightmare too. At least I know its a problem that needs to be addressed. And this blog is a perfect lab to experiment in.</p>
+
+						<p>Ok. That's all for this week.</p>
+						</article>
+
+						<aside>
+						<p>I wasn't planning on messing with the CSS, but I just loaded the page and God its ugly. Sorry to anyone who has already looked at this page.</p>
+						</aside>
 			</div>
 <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
 </body>
