--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<header class="blog_header">
-	    <h1>A Blog. Now With Real Words.</h1>
+	    <h1>A Blog Without a Clever Title</h1>
 	    	<nav class="navbar">
 		    	<ul>
 		    		<li><a href="#">Home</a></li>
