--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<title>The Blog You Asked For</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 	<header class="blog_header">
-	    <h1>A Blog. Now With Real Words.</h1>
-	    	<nav class="navbar">
+	    	<nav class="navbar navbar-inverse navbar-fixed-top">
 		    	<ul>
+		    	 	<h3>A Blog. Now With Real Words.</h3>
 		    		<li><a href="#">Home</a></li>
 		    		<li><a href="#">About</a></li>
 		    		<li><a href="#">Contact</a></li>
@@ -19,17 +20,17 @@
 
 			<div class="wrapper">
 
-					<h2 class="weekly">The First Entry</h2>
+					<h2 class="weekly" class="text-left">The First Entry</h2>
 						<p>Lorem ipsum dolor sit amet, erat praesent sed integer quis, aliquet neque ultrices condimentum blandit iaculis non, at in. Molestiae lorem tempor dolor nulla per, integer at imperdiet. Wisi vivamus vitae dui blandit in, hendrerit turpis. Mi leo suspendisse suspendisse lacinia tincidunt amet, sed dui feugiat venenatis parturient, aliquam sodales ullamcorper, lectus vitae justo quisque egestas ac eu, integer lectus urna viverra cras libero architecto. Ornare magna vel.</p>
 
-					<h2 class="weekly">The Secont Week</h2>
+					<h2 class="weekly" class="text-left">The Secont Week</h2>
 						<article>
 						<p>When I started ths blog, I used lorem ipsum as placeholder text. Five whole paragraphs of it. In retrospect, it was a missed oppurtunity to actually document the week to week progress I make at NSS. Going forward, that's what I'll use this for. This past week was the second week and things are progressing. I thought I had a better handle on HTML and CSS than I actually do, but that's ok. I figured out some of the mistakes I was making and I'm learning not to make them over and over again. I've also embraced the MVP ethos-- its more important that things work like they're supposed to rather than look nice. I need to continue to keep that in mind. I mean, things should still look nice, but I shouldn't waste time picking the perfect typography if the JavaScript won't run. Which brings me to my next point. JavaScript. I need to practice. I understand the concepts but putting into into practice isn't alway the easiest. I'm confident I can pick it up though. Ok. That's all for this week.</p>
 						</article>
 
 						<aside><p>I wasn't planning on messing with the CSS, but I just loaded the page and God its ugly. Sorry to anyone who has already looked at this page.</p></aside>
 
-						<h2 class="weekly">The Third Week</h2>
+						<h2 class="weekly" class="text-left">The Third Week</h2>
 						<article>
 						<p>The third week is down and things are starting to gel. JavaScript is still challenging, but its starting to make sense. I'm still having trouble with some aspects, but I feel like I am making progress. As things get more complex it becomes easier to grasp the basic concepts. Its hard to explain, but its like looking at something from the next level and then finally understanding the purpose.</p>
 						<p>We also were introduced to Sass, Bootstrap and Materialize. All of these make CSS styling more efficient, uniformed and, most importantly, less time consuming. I really like Sass and need to play around with Bootstrap/Materialize some more.</p>
