--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<header class="blog_header">
 
 	    	<nav class="navbar navbar-inverse navbar-fixed-top">
-=======
-	    <h1>A Blog Without a Clever Title</h1>
+		    <h1>A Blog Without a Clever Title</h1>
 		    	<ul>
 		    	 	<h3>A Blog. Now With Real Words.</h3>
 		    		<li><a href="#">Home</a></li>
@@ -39,6 +38,12 @@
 						<p>We also were introduced to Sass, Bootstrap and Materialize. All of these make CSS styling more efficient, uniformed and, most importantly, less time consuming. I really like Sass and need to play around with Bootstrap/Materialize some more.</p>
 						<p>Git is getting easier, too. I'm not making the same mistakes I was a few weeks ago. I'm making it a point to commit more often not only because its probably a good habit to get into, but also because its giving me more exposure to the commit process. I'm staring to feel more comfortable with the process. I've also starting including markdowns in all my commits. Again, this is mostly to get in the habit of doing it-- most of the actual text is just "here's what I did and here's what you're looking for".</p>
 						<p>Hopefully next week's post will also be optimistic.</p>
+						</article>
+						<h2 class="weekly" class="text-left">The Fourth Week</h2>
+						<article>
+						<p>Another week is down and things are still moving along. This week we covered IIFE's and XHR, concept that I understand but I'm still trying to figure out how to execute. Like anything else we learn, its going to take doing it over and over again in order to fully understand how the concept works.</p>
+						<p>Complete comprehension of JavaScript is still elusive, but I've been thumbing through <i>JavaScript and JQuery</i> by John Duckett and I've been finding that very helpful. It's more in-depth that W3Schools.com and more readable than MDN. When I come to something I don't understand, which is often, I go to the websites first (because its easier) and if I'm still not clear, I go right to Duckett. I haven't looked at his JQuery yet-- mostly because I don't want to confuse myself-- but I'm sure it will be just as helpful when I get there.</p>
+						<p>Last weekend, I ran into a friend of mine that is a full time programmer. He asked me how the bootcamp was going and what languages I was learning. When I mentioned JavaScript he rolled his eyes and started complaining about JS. He has a CS Degree and uses multiple programing languages on regular basis and <strong>he still finds JavaScript difficult to grasp</strong>. I took some comfort in that.
 						</article>
 			</div>
 <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
