--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</header>
 
 			<div class="wrapper">
-
+				<div class="blogposts">
 					<h2 class="weekly" class="text-left">The First Entry</h2>
 						<p>Lorem ipsum dolor sit amet, erat praesent sed integer quis, aliquet neque ultrices condimentum blandit iaculis non, at in. Molestiae lorem tempor dolor nulla per, integer at imperdiet. Wisi vivamus vitae dui blandit in, hendrerit turpis. Mi leo suspendisse suspendisse lacinia tincidunt amet, sed dui feugiat venenatis parturient, aliquam sodales ullamcorper, lectus vitae justo quisque egestas ac eu, integer lectus urna viverra cras libero architecto. Ornare magna vel.</p>
 
@@ -43,8 +43,9 @@
 						<article>
 						<p>Another week is down and things are still moving along. This week we covered IIFE's and XHR, concept that I understand but I'm still trying to figure out how to execute. Like anything else we learn, its going to take doing it over and over again in order to fully understand how the concept works.</p>
 						<p>Complete comprehension of JavaScript is still elusive, but I've been thumbing through <i>JavaScript and JQuery</i> by John Duckett and I've been finding that very helpful. It's more in-depth that W3Schools.com and more readable than MDN. When I come to something I don't understand, which is often, I go to the websites first (because its easier) and if I'm still not clear, I go right to Duckett. I haven't looked at his JQuery yet-- mostly because I don't want to confuse myself-- but I'm sure it will be just as helpful when I get there.</p>
-						<p>Last weekend, I ran into a friend of mine that is a full time programmer. He asked me how the bootcamp was going and what languages I was learning. When I mentioned JavaScript he rolled his eyes and started complaining about JS. He has a CS Degree and uses multiple programing languages on regular basis and <strong>he still finds JavaScript difficult to grasp</strong>. I took some comfort in that.
+						<p>Last weekend, I ran into a friend of mine that is a full time programmer. He asked me how the bootcamp was going and what languages I was learning. When I mentioned JavaScript he rolled his eyes and started complaining about JS. He has a CS Degree and uses multiple programing languages on regular basis and <strong>he still finds JavaScript difficult to grasp</strong>. I took some comfort in that.</p>
 						</article>
+				</div>
 			</div>
 <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
 </body>
