--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 						<p>Complete comprehension of JavaScript is still elusive, but I've been thumbing through <i>JavaScript and JQuery</i> by John Duckett and I've been finding that very helpful. It's more in-depth that W3Schools.com and more readable than MDN. When I come to something I don't understand, which is often, I go to the websites first (because its easier) and if I'm still not clear, I go right to Duckett. I haven't looked at his JQuery yet-- mostly because I don't want to confuse myself-- but I'm sure it will be just as helpful when I get there.</p>
 						<p>Last weekend, I ran into a friend of mine that is a full time programmer. He asked me how the bootcamp was going and what languages I was learning. When I mentioned JavaScript he rolled his eyes and started complaining about JS. He has a CS Degree and uses multiple programing languages on regular basis and <strong>he still finds JavaScript difficult to grasp</strong>. I took some comfort in that.</p>
 						</article>
+						<h2 class="weekly" class="text-left">The Fifth Week</h2>
+						<article>
+						<p>Another week is down. Things are still moving suepr fast, but I think I'm grasping everything. This week we mostly worked on a group project, which ended up being really fun. It also felt like the first real web app we've built. The translator was pretty involved, but Chatty actually seemed like something you'd find on the internet. It ended up being a lot of fun.</p>
+						<p>I'm still pretty surprised how often I struggle with something only for it to start making sense when we move on to the next step. I guess it's because some of the concepts only start to make sense in a larger context. Its happened a few times before and its <i>starting</i> to happen with IIFEs and JSON. I still need to practice those.</p>
+						<p>After the projects were presented, we went a little bit deeper with NPM, Bower and Grunt. I can see how something like Grunt makes life easier because it does all the things I tend to forget about! Its not so muhc that it does all the heavy lifting, but it takes care of all the boring stuff.</p>
+						<p>We dipped our toes into JQuery this week as well, which I'm pretty excited about. I know its important to be able to read and write plain jane JavaScript, but JQuery looks so much easier. I'm sure there's a learning curve, but I'm looking forward to being able to type less words and more dollar signs.</p>
+						</article>
 				</div>
 			</div>
 <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
