added contact.html page for fun

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>The Blog You Asked For</title>
+    <title>Contact Page</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -14,7 +14,7 @@
             <h1>A Blog Without a Clever Title</h1>
             <ul>
                 <h3>A Blog. Now With Real Words.</h3>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -22,10 +22,16 @@
     </header>
     <div class="wrapper">
         <div id="container">
+        <article>
+        <p>If, for some strange reason, you'd like to get in touch, email is the best way.</p>
+
+        <a href="joeybiotti4@gmail.com">EMail me.</a>
+
+        <p>I avoid all forms of social media and you should too.</p>
+        </article>
         </div>
     </div>
     <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
-    <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 
 </html>
