added browserify and grunt for practice

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
     <header class="blog_header">
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <h1>A Blog Without a Clever Title</h1>
-            <ul>
-                <h3>A Blog. Now With Real Words.</h3>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <h1 id="name">The Blog Without a Clever Title</h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
         </nav>
+        <br>
     </header>
     <div class="wrapper">
         <div id="container">
         </div>
     </div>
-    <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
+    <footer class="blog_footer">Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
     <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 
