--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header class="blog_header">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <h1 id="name">The Blog Without a Clever Title</h1>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
         <br>
     </header>
@@ -25,7 +25,8 @@
         </div>
     </div>
     <footer class="blog_footer">Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
-    <script type="text/javascript" src="javascripts/main.js"></script>
+    <script type="text/javascript" src=lib/jquery/dist/jquery.min.js></script>
+    <script type="text/javascript" src="dist/app.js"></script>
 </body>
 
 </html>
