week six post-- added contact.js page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Contact Page</title>
+    <title>The Blog You Asked For</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,27 +11,25 @@
 <body>
     <header class="blog_header">
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <h1>A Blog Without a Clever Title</h1>
+            <h1 id="name">The Blog Without a Clever Title</h1>
             <ul>
-                <h3>A Blog. Now With Real Words.</h3>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <br>
     </header>
-    <div class="wrapper">
-        <div id="container">
-        <article>
-        <p>If, for some strange reason, you'd like to get in touch, email is the best way.</p>
-
-        <a href="joeybiotti4@gmail.com">EMail me.</a>
-
-        <p>I avoid all forms of social media and you should too.</p>
-        </article>
-        </div>
-    </div>
-    <footer>Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
+    <br>
+    <h1 id="contact-para">There is a JavaScript file attached to this page. It doesn't do anything right now yet. It will someday soon though.</h1>
+<!--    <div class="wrapper">
+            <div id="container"> -->
+<!--      </div>
+     </div> -->
+    <footer class="blog_footer">Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
+ <!--    <script type="text/javascript" src=lib/jquery/dist/jquery.min.js></script> -->
+    <script type="text/javascript" src="javascripts/contact.js"></script>
 </body>
 
 </html>
+
