added json file for posts

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>The Blog You Asked For</title>
+    <title>Blog: Contact</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,16 +20,16 @@
         </nav>
         <br>
     </header>
-    <br>
-    <h1 id="contact-para">There is a JavaScript file attached to this page. It doesn't do anything right now yet. It will someday soon though.</h1>
-<!--    <div class="wrapper">
-            <div id="container"> -->
-<!--      </div>
-     </div> -->
-    <footer class="blog_footer">Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
- <!--    <script type="text/javascript" src=lib/jquery/dist/jquery.min.js></script> -->
-    <script type="text/javascript" src="javascripts/contact.js"></script>
+    <div class="wrapper">
+        <div id="container">
+        <article>
+            <p id="contact-para">The contact information will go here.</p>
+        </article>
+        </div>
+    </div>
+    <footer class="blog_footer">Joey Biotti&trade;, &copy; 2017.</footer>
+    <script type="text/javascript" src="dist/app.js"></script>
+    <script type="text/javascript" src=lib/node_modules/jquery/dist/jquery.min.js></script>
 </body>
 
 </html>
-
