--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-    <title>Contact!</title>
+    <title>Blog: Home</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <header class="blog_header">
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <h1 id="name">The Blog Without a Clever Title</h1>
+            <h1 id="name">[Title: TBD.]</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -22,11 +22,13 @@
     </header>
     <div class="wrapper">
         <div id="container">
+            <p id="posts">
+            </p>
         </div>
     </div>
-    <footer class="blog_footer">Joey Biotti, &copy; 2017. But it looks like GeoCities, 1997.</footer>
-    <script type="text/javascript" src=lib/jquery/dist/jquery.min.js></script>
+    <footer class="blog_footer">Joey Biotti&trade;, &copy; 2017.</footer>
     <script type="text/javascript" src="dist/app.js"></script>
+    <script type="text/javascript" src=lib/node_modules/jquery/dist/jquery.min.js></script>
 </body>
 
 </html>
