played around w/ json and added an ig

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="blog_header">
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <h1 id="name">[Title: TBD.]</h1>
+            <h1 id="name">Clever/Meaningful Title Will Go Here.</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -27,8 +27,8 @@
         </div>
     </div>
     <footer class="blog_footer">Joey Biotti&trade;, &copy; 2017.</footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="dist/app.js"></script>
-    <script type="text/javascript" src=lib/node_modules/jquery/dist/jquery.min.js></script>
 </body>
 
 </html>
